[package]
name = "random-pokemon-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
rand = "0.8.5"
reqwest = "0.11.16"
rustemon = "3.1.0"
thiserror = "1.0.61"
tokio = { version = "1.27.0", features = ["full"] }
viuer = "0.6.2"
