[package]
name = "random-pokemon-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.6" # Need to wait for `viuer` to update it's `image` dependency before updating here.
rand = "0.8.5"
reqwest = "0.12.5"
rustemon = "3.4.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
viuer = "0.7.1"
